<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the Service?</string>
    <string name="service_quality_awesome">Awesome (20%)</string>
    <string name="service_quality_good">Good (18%)</string>
    <string name="service_quality_okay">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>