<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cost_of_service"
        android:layout_width="147dp"
        android:layout_height="44dp"
        android:hint="@string/cost_of_service"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service" />

    <RadioGroup
        android:id="@+id/tipOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_question">

        <RadioButton
            android:id="@+id/serviceQualityAwesome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_quality_awesome"
            tools:ignore="OnClick" />

        <RadioButton
            android:id="@+id/serviceQualityGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_quality_good"
            tools:ignore="OnClick" />

        <RadioButton
            android:id="@+id/serviceQualityOkay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_quality_okay"
            tools:ignore="OnClick" />

    </RadioGroup>

    <Switch
        android:id="@+id/roundUpSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/round_up_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tipOptions" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roundUpSwitch" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculateButton"
        tools:text="Tip Amount: $10"
        />

</androidx.constraintlayout.widget.ConstraintLayout>